--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,14 @@
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item ">
-        <a class="nav-link" [routerLink]="['/home']">Home </a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/about']">About</a>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/blog']" [routerLinkActive]="['active']">Blog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/contact']">Contact</a>
+        <a class="nav-link" [routerLink]="['/about']" [routerLinkActive]="['active']">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/contact']" [routerLinkActive]="['active']">Contact</a>
       </li>
     </ul>
 
