--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,12 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/contact']" [routerLinkActive]="['active']">Contact</a>
       </li>
+      <li>
+        <button class="loginBtn" [routerLink="['/login']" [routerLinkActive]="['active']"> Login</button>
+      </li>
+      <li>
+        <button class="loginBtn" [routerLink="['/register']" [routerLinkActive]="['active']"> Register</button>
+      </li>
     </ul>
 
   </div>
