--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,16 +10,17 @@
         </a>
     </div>
     <!-- Card image -->
-    <h4 style="font-size:40px; text-align:center; font-family: 'Amatic SC'">I'm Laura Godinez</h4>
-    <p style=" font-size:20px; text-align:center; font-family: 'Amatic SC'"> I am a recent Information Technology graduate at the associate level with a focus in Software Developement as a carreer.
-        I graduated with my associates in early May,2020. Shortly after graduating, I enrolled with Per Scholas' Java Developer
-        Training Course. While with Per Scholas I have been able to build on and expand my knowledge as a Full Stack Developer.
-        Thanks to my training i have been able to fully build this blog from scratch which is not bad for my first actual
-        project which is an incredible sign of better things to come. When i am not on the computer programming and building
-        on my knowledge I am out with loved ones. You can pretty much always find me outside if im not on the computer. I
-        love to take bike rides, swim, hike and just appreciate all that nature has to offer.
-    </p>
-
+    <div class="card">
+        <h4 style="font-size:40px; text-align:center; font-family: 'Amatic SC'">I'm Laura Godinez</h4>
+        <p style=" font-size:20px; text-align:center; font-family: 'Amatic SC'"> I am a recent Information Technology graduate at the associate level with a focus in Software Developement as a carreer.
+            I graduated with my associates in early May,2020. Shortly after graduating, I enrolled with Per Scholas' Java
+            Developer Training Course. While with Per Scholas I have been able to build on and expand my knowledge as a Full
+            Stack Developer. Thanks to my training i have been able to fully build this blog from scratch which is not bad
+            for my first actual project which is an incredible sign of better things to come. When i am not on the computer
+            programming and building on my knowledge I am out with loved ones. You can pretty much always find me outside
+            if im not on the computer. I love to take bike rides, swim, hike and just appreciate all that nature has to offer.
+        </p>
+    </div>
 
 </div>
 
