--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,36 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-
-
-<body>
-    <div class="container-fluid bg">
-        <div class="row">
-            <div class="col-lg-4 col-md-2 col-sm-2 col-xs-12"></div>
-            <div class="col-lg-4 col-md-8 col-sm-8 col-xs-12">
-                <!-- form start -->
-                <form class="form-container">
-                    <h1 class="header">SIGN IN </h1>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="remember-checkbox">
-                        <label class="form-check-label" for="remember-checkbox">Remember me</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                </form>
-                <!-- form end -->
-            </div>
-
-            <div class="col-lg-4 col-md-2 col-sm-2 col-xs-12"></div>
+<div class="container-fluid bg">
+    <div class="row">
+        <div class="col-lg-4 col-md-2 col-sm-2 col-xs-12"></div>
+        <div class="col-lg-4 col-md-8 col-sm-8 col-xs-12">
+            <!-- form start -->
+            <form [formGroup]="loginFormGroup" class="form-container">
+                <h1 class="header">SIGN IN </h1>
+                <div class="form-group">
+                    <input autocomplete="none" formControlName="email" type="email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <input autocomplete="none" formControlName="password" type="password" placeholder="Password">
+                </div>
+                <button (click)="submitForm()" type="submit" [disabled]="loginFormGroup.dirty && loginFormGroup.invalid">login</button>
+            </form>
+            <!-- form end -->
         </div>
     </div>
-</body>
-
-</html>
+</div>
