--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,32 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="container-fluid bg">
+    <div class="row">
+        <div class="col-md-4 col-sm-4 col-xs-12"></div>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+            <!-- form start -->
+            <form [formGroup]="registrationFormGroup" class="form-container ">
+                <h1 class="header">SIGN UP </h1>
+                <div class="form-group ">
+                    <input autocomplete="none" formControlName="firstName" type="text" placeholder="First Name"><br>
+                </div>
+                <div class="form-group ">
+                    <input autocomplete="none" formControlName="lastName" type="text" placeholder="Last Name"><br>
+                </div>
+                <div class="form-group ">
+                    <input autocomplete="none" formControlName="email" type="email" placeholder="Email"><br>
+                </div>
+                <div class="form-group ">
+                    <input autocomplete="none" formControlName="password" type="text" placeholder="Password"><br>
 
-<body>
-    <div class="container-fluid bg">
-        <div class="row">
-            <div class="col-md-4 col-sm-4 col-xs-12"></div>
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <!-- form start -->
-                <form class="form-container signUpForm-C">
-                    <h1 class="header">Sign Up </h1>
-                    <div class="form-group signUpLabels">
-                        <input type="text" class="form-control" id="signupLastName-id" aria-describedby="emailHelp" placeholder="First Name"><br>
-                        <input type="text" class="form-control" id="signUpLastName-id" aria-describedby="emailHelp" placeholder="Last Name"><br>
-                        <input type="email" class="form-control" id="signUpInputEmail-id" aria-describedby="emailHelp" placeholder="Email"><br>
-                        <input type="text" class="form-control" id="signUpPassword-id" aria-describedby="emailHelp" placeholder="Password"><br>
-                        <input type="text" class="form-control" id="signUpPasswordConf-id" aria-describedby="emailHelp" placeholder="Confirm Email"><br>
+                </div>
 
-
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block">Sign up</button>
-                </form>
-                <!-- form end -->
-            </div>
-
-            <div class="col-md-4 col-sm-4 col-xs-12"></div>
+                <button (click)="submitForm()" type="submit" [disabled]="registrationFormGroup.dirty && registrationFormGroup.invalid">sign up</button>
+            </form>
+            <!-- form end -->
         </div>
     </div>
-
-</body>
-
-</html>
+</div>
