--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,13 @@
-<p>admin works!</p>
+<div class="container">
+
+    <form>
+        <h2>Create Entry</h2>
+        <label>Title</label>
+        <input type="text"><br>
+
+        <label>Content</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </form>
+
+    <button type="submit">Submit</button>
+</div>
