--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,13 +1,17 @@
-<div class="container">
+<div class="container-fluid bg">
+    <div class="row">
+        <div class="col-lg-4 col-md-2 col-sm-2 col-xs-12"></div>
+        <div class="col-lg-4 col-md-8 col-sm-8 col-xs-12">
+            <form [formGroup]="CreateFormGroup" class="form-container">
+                <h2>Create Entry</h2>
+                <label>Title   </label>
+                <input autocomplete="none" type="text"><br>
 
-    <form>
-        <h2>Create Entry</h2>
-        <label>Title</label>
-        <input type="text"><br>
+                <label>Content</label>
+                <textarea autocomplete="none" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </form>
 
-        <label>Content</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </form>
-
-    <button type="submit">Submit</button>
+            <button (click)="submitForm()" type="submit" [disabled]="loginFormGroup.dirty && loginFormGroup.invalid">Submit</button>
+        </div>
+    </div>
 </div>
